src/autoprox.ebnf
CHARACTER     = "A" ... "Z"
              | "a" ... "z"
              | "_";
DECIMAL_DIGIT = "0" ... "9";

INT_LITERAL   = (DECIMAL_DIGIT - "0"), {DECIMAL_DIGIT};
STR_LITERAL   = '"', *, '"';
LITERAL       = INT_LITERAL
              | STR_LITERAL;

IDENTIFIER    = CHARACTER, {CHARACTER | DECIMAL_DIGIT};

TYPE          = "METHOD"
              | "SCHEME"
              | "DOMAIN"
              | "PORT"
              | "PATH"
              | "PARAMETERS"
              | "VERSION"
              | "HEADER"
              | "STATUS_CODE"
              | "STATUS_MESSAGE"
              | "SCOPE";

EXPRESSION    = EXPR_BOOL_OR;
EXPR_BOOL_OR  = EXPR_BOOL_AND, {"|", EXPR_BOOL_AND};
EXPR_BOOL_AND = EXPR_COMP, {"&", EXPR_COMP};
EXPR_COMP     = TODO;

DEFINE_STMT   = "def", DEFINE_VAR, ":", DEFINE_VALUE;
DEFINE_VAR    = TYPE, IDENTIFIER;
DEFINE_VALUE  = LITERAL
              | DEFINE_BODY;
DEFINE_BODY   = DEFINE_BODY_T, "end";
DEFINE_BODY_T = BODY_ASSIGN
              | BODY_EXPR;
BODY_ASSIGN   = ASSIGN_LIST, "end";
BODY_EXPR     = BOOL_EXPR, "end";

FL_STATEMENT  = DEFINE_STMT
              | INTERCEPT_STMT;
PROGRAM       = {FL_STATEMENT};
